# DockLight

./: .gitignore  .gitignore.orig  Makefile  Makefile.am  README.md  clean.sh  config.h.in~  configure  configure.ac
.pc/: applied-patches
.pc/add-deprecated-monitor-methods/Classes/: MonitorGeometry.cpp
.pc/minorchanges/Classes/: Preview.cpp
.pc/remove-deprecate-methods/Classes/: MonitorGeometry.cpp
.pc/test5/Classes/: Defines.h  DockPanel.cpp
Classes/: About.cpp  About.h  AppWindow.cpp  AppWindow.h  Defines.h  DockItem.cpp  DockItem.h  DockPanel.cpp  DockPanel.cpp.orig  DockPanel.cpp_  DockPanel.h  DockPosition.cpp  DockPosition.h  IconLoader.cpp  IconLoader.h  Launcher.cpp  Launcher.h  LauncherWindow.cpp  LauncherWindow.h  MonitorGeometry.cpp  MonitorGeometry.h  Preview.cpp  Preview.h  TitleWindow.cpp  TitleWindow.h  Utilities.cpp  Utilities.h  WindowControl.cpp  WindowControl.h  XPreview.cpp  XPreview.h
Package/: docklight_1.0-10_amd64.deb  docklight_1.0-11_amd64.deb  docklight_1.0-8_amd64.deb  docklight_1.0-9_amd64.deb
data/: Makefile.am  docklight.ini  docklight.menu.desktop  org.freedesktop.docklight.policy
data/4autotools/: docklight.menu.desktop  org.freedesktop.docklight.policy
data/4package/: docklight.menu.desktop  org.freedesktop.docklight.policy
data/icons/: Makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  docklight-1.0.cron.d.ex  docklight-1.0.default.ex  docklight-1.0.doc-base.EX  docklight-1.0.install  docklight-1.0.postinst  docklight-1.0.postint  docklight-1.0.substvars  docklight.cron.d.ex  docklight.default.ex  docklight.desktop  docklight.doc-base.EX  docklight.ini  docklight.install  docklight.postinst  docklight.postrm  docklight.substvars  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  org.freedesktop.docklight.policy  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  template.desktop  watch.ex
debian/.debhelper/docklight-1.0/: dbgsym-build-ids
debian/.debhelper/docklight-1.0/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/docklight-1.0/dbgsym-root/usr/share/doc/: docklight-1.0-dbgsym
debian/docklight-1.0/DEBIAN/: control  md5sums  postrm
debian/docklight-1.0/usr/share/DockLight/: docklight  docklight.config
debian/docklight-1.0/usr/share/doc/docklight-1.0/: copyright
debian/docklight/DEBIAN/: control  md5sums  postinst  postrm
debian/docklight/lib/DockLight/: docklight
debian/docklight/usr/share/applications/: docklight.desktop
debian/docklight/usr/share/doc/docklight/: copyright
debian/patches/: add-deprecated-monitor-methods  enable-deprecated-methods  minorchanges  remove-deprecate-methods
debian/source/: include-binaries
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
package/: docklight_1.0-12_amd64.deb  docklight_1.0-13_amd64.deb  docklight_1.0-14_amd64.deb  docklight_1.0-15_amd64.deb  docklight_1.0-16_amd64.deb  docklight_1.0-17_amd64.deb  docklight_1.0-18_amd64.deb  docklight_1.0-19_amd64.deb
po/: LINGUAS  POTFILES.in  de.mo  de.po  deploymo.sh  docklight.pot  es.po  fr.po  hu.po  mofile  removemo.sh  ru.po  th.mo  th.po
po/es/: docklight.mo
proj.linux/: main.cpp
src/: About.cpp  About.h  Animations.h  AppWindow.cpp  AppWindow.h  Configuration.cpp  Configuration.h  Defines.h  DockItem.cpp  DockItem.h  DockPanel.cpp  DockPanel.h  DockPosition.cpp  DockPosition.h  DragDropWindow.cpp  DragDropWindow.h  IconLoader.cpp  IconLoader.h  Launcher.cpp  Launcher.h  LauncherWindow.cpp  LauncherWindow.h  Makefile.am  MoReader.cpp  MoReader.h  MonitorGeometry.cpp  MonitorGeometry.h  Preferences.cpp  Preferences.h  Preview.cpp  Preview.h  SessionWindow.cpp  SessionWindow.h  TitleWindow.cpp  TitleWindow.h  Utilities.cpp  Utilities.h  WindowControl.cpp  WindowControl.h  main.cpp
src/.deps/: About.Po  AppWindow.Po  DockItem.Po  DockPanel.Po  DockPosition.Po  IconLoader.Po  Launcher.Po  LauncherWindow.Po  MonitorGeometry.Po  Preview.Po  TitleWindow.Po  Utilities.Po  WindowControl.Po  main.Po
src/data/: docklight (copy).ini  docklight.ini  docklight.menu.desktop
src/data/BANK/: docklight.ini
src/docklight.data/: docklight.launcher.sh  docklight.template.desktop  org.freedesktop.docklight.policy
